# resume-analizer

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml
.github/: codecov.yml  copilot-instructions.md
.github/workflows/: release.yaml  tests.yml
.hooks/: hooks-README.md
src/: __init__.py
src/services/: __init__.py  ai_analyzer.py
src/static/: styles.css
src/utils/: __init__.py  text_extractor.py  ui_utils.py
static/: styles.css
tests/: conftest.py  test_main.py
tests/services/: test_ai_analyzer.py
tests/utils/: test_text_extractor.py  test_ui_utils.py
